--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="Create_an_attractive_logo_for_'Reflective_Buddy',_.png" alt="Reflective Buddy Logo" class="logo">
+    <img src="logo.png" alt="Reflective Buddy Logo" class="logo">
     <h1>Reflective Guide</h1>
     <p>Your journey to self-discovery and personal growth starts here.</p>
     <div id="summary">
