--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <section id="book">
       <h2>Embedded Book</h2>
-      <iframe src="book.pdf" width="100%" height="600px"></iframe>
+      <iframe src="Book.pdf" width="100%" height="600px"></iframe>
     </section>
   </main>
 
