--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       <div id="chat-messages"></div>
       <input type="text" id="chat-input" placeholder="Ask how the chatbot works..." />
       <button id="chat-send">Send</button>
+      <div id="typing-indicator" class="typing-indicator">Reflective Buddy is typing...</div>
     </div>
   </div>
 
