--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       <p>Reflective Buddy is your personal companion chatbot that helps you enhance self-awareness through weekly reflective questions. Every week, you will receive a series of questions designed to encourage introspection and personal growth. Diligently answer these questions and open yourself to the companion to make the most out of this experience.</p>
     </div>
     <div id="current-week">
-      <h2>Current Week: <span id="week-number"></span></h2>
+      <h2>Week <span id="week-number"></span> of <span id="current-year"></span></h2>
     </div>
+    <div id="current-date-time"></div>
   </header>
 
   <main>
@@ -27,7 +28,7 @@
       </div>
     </section>
 
-    <section id="questions">
+    <section id="questions" style="display:none;">
       <h2>This Week's Reflective Questions</h2>
       <div id="question-container"></div>
     </section>
@@ -35,9 +36,30 @@
     <section id="signup">
       <h2>Activate Reflective Buddy</h2>
       <form id="signup-form">
+        <input type="text" id="userName" name="userName" placeholder="Enter your name" required>
         <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="Enter your phone number with country code" required>
-        <button type="submit">Activate</button>
+        <button type="submit">Send Verification Code</button>
       </form>
+      <form id="verify-form" style="display:none;">
+        <input type="text" id="verificationCode" name="verificationCode" placeholder="Enter the verification code" required>
+        <button type="submit">Verify</button>
+      </form>
+    </section>
+
+    <section id="mood-tracker">
+      <h2>Weekly Mood Tracker</h2>
+      <form id="mood-form">
+        <label for="mood">How are you feeling this week?</label>
+        <input type="range" id="mood" name="mood" min="1" max="5" step="1">
+        <div id="mood-emoji">😊</div>
+        <button type="submit">Log Mood</button>
+      </form>
+      <div id="mood-log"></div>
+    </section>
+
+    <section id="inspirational-quote">
+      <h2>Daily Inspirational Quote</h2>
+      <p id="quote"></p>
     </section>
 
     <section id="schedule">
@@ -61,8 +83,8 @@
     </section>
 
     <section id="book">
-      <h2>Embedded Book</h2>
-      <iframe src="Book.pdf" width="100%" height="600px"></iframe>
+      <h2>Your journey to living your mindful intelligence</h2>
+      <iframe src="book.pdf" width="100%" height="600px"></iframe>
     </section>
   </main>
 
