--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
 
     <section id="inspirational-quote">
-      <h2>Daily Inspirational Quote</h2>
+      <h2> A journey of 1000 miles starts with one step</h2>
       <p id="quote"></p>
     </section>
 
