--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div id="mood-log"></div>
     </section>
 
-    <section id="inspirational-quote">
+    <section id="Lets start engaging">
       <h2> A journey of 1000 miles starts with one step</h2>
       <p id="quote"></p>
     </section>
@@ -82,9 +82,9 @@
       </form>
     </section>
 
-    <section id="book">
+    <section id="Book">
       <h2>Your journey to living your mindful intelligence</h2>
-      <iframe src="book.pdf" width="100%" height="600px"></iframe>
+      <iframe src="Book.pdf" width="150%" height="700px"></iframe>
     </section>
   </main>
 
