--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Reflective Buddy Logo" class="logo">
+    <img src="Create_an_attractive_logo_for_'Reflective_Buddy',_.png" alt="Reflective Buddy Logo" class="logo">
     <h1>Reflective Guide</h1>
     <p>Your journey to self-discovery and personal growth starts here.</p>
     <div id="summary">
@@ -19,6 +19,12 @@
       <h2>Week <span id="week-number"></span> of <span id="current-year"></span></h2>
     </div>
     <div id="current-date-time"></div>
+    <div id="appointment-details" style="display:none;">
+      <h3>Next Session</h3>
+      <p id="appointment-info"></p>
+      <button id="send-email">Send Email</button>
+      <button id="add-to-calendar">Add to Google Calendar</button>
+    </div>
   </header>
 
   <main>
@@ -57,34 +63,22 @@
       <div id="mood-log"></div>
     </section>
 
-    <section id="Lets start engaging">
-      <h2> A journey of 1000 miles starts with one step</h2>
+    <section id="inspirational-quote">
+      <h2>Daily Inspirational Quote</h2>
       <p id="quote"></p>
     </section>
 
     <section id="schedule">
       <h2>Schedule Your Interactive Session</h2>
       <p>Chat with your true companion (The most interesting and important person). Take 30 minutes to reflect, engage, and grow. Let's explore your thoughts and aspirations together in a mindful and meaningful way.</p>
-      <form id="schedule-form">
-        <label for="session-day">Choose a day:</label>
-        <select id="session-day" name="session-day" required>
-          <option value="Monday">Monday</option>
-          <option value="Tuesday">Tuesday</option>
-          <option value="Wednesday">Wednesday</option>
-          <option value="Thursday">Thursday</option>
-          <option value="Friday">Friday</option>
-          <option value="Saturday">Saturday</option>
-          <option value="Sunday">Sunday</option>
-        </select>
-        <label for="session-time">Choose a time:</label>
-        <input type="time" id="session-time" name="session-time" required>
-        <button type="submit">Schedule Session</button>
-      </form>
+      <div id="calendly-container">
+        <div class="calendly-inline-widget" data-url="https://calendly.com/your-calendly-link" style="min-width:320px;height:630px;"></div>
+      </div>
     </section>
 
-    <section id="Book">
-      <h2>Your journey to living your mindful intelligence</h2>
-      <iframe src="Book.pdf" width="150%" height="700px"></iframe>
+    <section id="book">
+      <h2>Embedded Book</h2>
+      <iframe src="book.pdf" width="100%" height="600px"></iframe>
     </section>
   </main>
 
@@ -104,6 +98,7 @@
 
   <button id="chat-toggle">Chat</button>
 
+  <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
   <script src="app.js"></script>
 </body>
 </html>
