--- a/index.html
+++ b/index.html
@@ -62,22 +62,16 @@
       </form>
       <div id="mood-log"></div>
     </section>
-
-    <section id="inspirational-quote">
-      <h2>Daily Inspirational Quote</h2>
-      <p id="quote"></p>
-    </section>
-
     <section id="schedule">
-      <h2>Schedule Your Interactive Session</h2>
-      <p>Chat with your true companion (The most interesting and important person). Take 30 minutes to reflect, engage, and grow. Let's explore your thoughts and aspirations together in a mindful and meaningful way.</p>
+      <h2>Schedule Your first interactive Session</h2>
+      <p>Interact with your true companion (The most interesting person). Take 30 minutes to reflect, engage, and grow. Let's explore your thoughts and aspirations together  mindful and meaningful way.</p>
       <div id="calendly-container">
-        <div class="calendly-inline-widget" data-url="https://calendly.com/your-calendly-link" style="min-width:320px;height:630px;"></div>
+        <div class="calendly-inline-widget" data-url="https://calendly.com/your-calendly-link" style="min-width:220px;height:530px;"></div>
       </div>
     </section>
 
     <section id="book">
-      <h2>Embedded Book</h2>
+      <h2>Your journey to living your mindful intelligence starts with a few pages</h2>
       <iframe src="book.pdf" width="100%" height="600px"></iframe>
     </section>
   </main>
