--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
       </div>
     </section>
 
-    <section id="book">
+    <section id="Book">
       <h2>Your journey to living your mindful intelligence starts with a few pages</h2>
-      <iframe src="book.pdf" width="100%" height="600px"></iframe>
+      <iframe src="Book.pdf" width="100%" height="600px"></iframe>
     </section>
   </main>
 
