--- a/index.html
+++ b/index.html
@@ -8,23 +8,8 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Reflective Buddy Logo" class="logo">
     <h1>Reflective Guide</h1>
     <p>Your journey to self-discovery and personal growth starts here.</p>
-    <div id="summary">
-      <h2>What is Reflective Buddy?</h2>
-      <p>Reflective Buddy is your personal companion chatbot that helps you enhance self-awareness through weekly reflective questions. Every week, you will receive a series of questions designed to encourage introspection and personal growth. Diligently answer these questions and open yourself to the companion to make the most out of this experience.</p>
-    </div>
-    <div id="current-week">
-      <h2>Week <span id="week-number"></span> of <span id="current-year"></span></h2>
-    </div>
-    <div id="current-date-time"></div>
-    <div id="appointment-details" style="display:none;">
-      <h3>Next Session</h3>
-      <p id="appointment-info"></p>
-      <button id="send-email">Send Email</button>
-      <button id="add-to-calendar">Add to Google Calendar</button>
-    </div>
   </header>
 
   <main>
@@ -34,7 +19,7 @@
       </div>
     </section>
 
-    <section id="questions" style="display:none;">
+    <section id="questions">
       <h2>This Week's Reflective Questions</h2>
       <div id="question-container"></div>
     </section>
@@ -42,37 +27,26 @@
     <section id="signup">
       <h2>Activate Reflective Buddy</h2>
       <form id="signup-form">
-        <input type="text" id="userName" name="userName" placeholder="Enter your name" required>
         <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="Enter your phone number with country code" required>
-        <button type="submit">Send Verification Code</button>
-      </form>
-      <form id="verify-form" style="display:none;">
-        <input type="text" id="verificationCode" name="verificationCode" placeholder="Enter the verification code" required>
-        <button type="submit">Verify</button>
+        <button type="submit">Activate</button>
       </form>
     </section>
 
-    <section id="mood-tracker">
-      <h2>Weekly Mood Tracker</h2>
-      <form id="mood-form">
-        <label for="mood">How are you feeling this week?</label>
-        <input type="range" id="mood" name="mood" min="1" max="5" step="1">
-        <div id="mood-emoji">😊</div>
-        <button type="submit">Log Mood</button>
-      </form>
-      <div id="mood-log"></div>
-    </section>
     <section id="schedule">
-      <h2>Schedule Your first interactive Session</h2>
-      <p>Interact with your true companion (The most interesting person). Take 30 minutes to reflect, engage, and grow. Let's explore your thoughts and aspirations together  mindful and meaningful way.</p>
-      <div id="calendly-container">
-        <div class="calendly-inline-widget" data-url="https://calendly.com/your-calendly-link" style="min-width:220px;height:530px;"></div>
-      </div>
+      <h2>Schedule Your Interactive Session</h2>
+      <p>Chat with your true companion (The most interesting and important person)</p>
+      <form id="schedule-form">
+        <label for="session-date">Choose a date:</label>
+        <input type="date" id="session-date" name="session-date" required>
+        <label for="session-time">Choose a time:</label>
+        <input type="time" id="session-time" name="session-time" required>
+        <button type="submit">Schedule Session</button>
+      </form>
     </section>
 
-    <section id="Book">
-      <h2>Your journey to living your mindful intelligence starts with a few pages</h2>
-      <iframe src="Book.pdf" width="100%" height="600px"></iframe>
+    <section id="book">
+      <h2>Embedded Book</h2>
+      <iframe src="book.pdf" width="100%" height="600px"></iframe>
     </section>
   </main>
 
@@ -80,19 +54,6 @@
     <p>&copy; 2024 Reflective Guide. All rights reserved.</p>
   </footer>
 
-  <div id="chatbot">
-    <div id="chat-header">Ask Reflective Buddy</div>
-    <div id="chat-body">
-      <div id="chat-messages"></div>
-      <input type="text" id="chat-input" placeholder="Ask how the chatbot works..." />
-      <button id="chat-send">Send</button>
-      <div id="typing-indicator" class="typing-indicator">Reflective Buddy is typing...</div>
-    </div>
-  </div>
-
-  <button id="chat-toggle">Chat</button>
-
-  <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
   <script src="app.js"></script>
 </body>
 </html>
