--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </section>
 
     <section id="Book">
-      <h2>Embedded Book</h2>
+      <h2>Your journey to your mindful intelligence starts from a few pages</h2>
       <iframe src="Book.pdf" width="100%" height="600px"></iframe>
     </section>
   </main>
